--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,11 @@
 html,
 body {
     margin: 0;
-    font-size: 100%;
-    background: url(../img/main_bg.jpg);
+    font-size: 100%;    
     font-family: 'Lato', sans-serif;
     scroll-behavior: smooth;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 body a {
@@ -34,9 +35,8 @@ input[type="search"] {
 }
 /* ---HEADER---*/
 .bg_yellow{
-    background-image: url(../img/header_bg.jpeg) !important;
-    height: 252px;
-    padding-top: 30px;
+   background: #F7A805;
+    padding: 10px 0;
 }
 .nav{
     padding-left: 200px;
@@ -46,7 +46,7 @@ input[type="search"] {
     padding: 0 25px;
 }
 .logo-color{
-    color: teal;
+    color: #E42520;
 }
 .btn-outline-light{
     color: teal;
@@ -62,15 +62,67 @@ input[type="search"] {
 }
 /* ---HEADER END---*/
 /* ---MAIN SECTION---*/
-.margint-top{
-    margin-top: -70px;
+.main-bg{
+   background-image: url(../img/movie.jpg);
+    background-size: cover;
+    padding: 15px 0 50px;
+
+}
+.section{
+    font-size: 14px;
     background: #fff;
-    border-radius: 10px;
     padding: 20px;
+    width: 25%;    
+}
+.left-radius{
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.right-radius{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.section-main{
+    width: 50%;
+    margin: 0 10px;
+    border-radius: 0;
 }
 /* ---MAIN SECTION END---*/
-
-
+.simple-title{
+    font-size: 14px;
+    color: teal;
+    text-align: left;
+    font-weight: lighter;
+    padding: 5px;
+    width: 100%;
+}
+.title {
+    font-size: 16px;
+    font-weight: bold;
+    color: #E42520;
+    text-align: center;
+}
+.left-item{
+    padding-bottom: 10px;
+    border-bottom: 1px solid #7588A6;
+}
+.left-item:last-child{
+    border-bottom: none;
+}
+.main-btn{
+    border-radius: 3px;
+    background: #F6A704;
+    text-transform: uppercase;
+    color: teal;   
+    border: 1px solid teal;
+    padding: 7px 25px;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+}
+.main-btn:hover{
+    background: #ffc107;
+}
 
 footer{
     background: #fff;
