--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -2,8 +2,36 @@
 {% load static%}
 
 {% block content %}
-    <div class="d-flex">
-ljnhkbhkljjhlkl
+    <div class="left-ads-display col-lg-9">
+        <div class="row">
+         
+            <div class="col-md-4 product-men">
+                <div class="product-shoe-info editContent text-center mt-lg-4" >
+                    <div class="men-thumb-item">
+                        <img src="" class="img-fluid" alt="" >
+                    </div>
+                    <div class="item-info-product">
+                        <h4 class="">
+                            <a href="" class="editContent" > movie.title</a>
+                        </h4>
+
+                        <div class="product_price">
+                            <div class="grid-price">
+                                <span class="money editContent" >movie.tagline</span>
+                            </div>
+                        </div>
+                        <ul class="stars">
+                            <li><a href="#"><span class="fa fa-star" aria-hidden="true" ></span></a></li>
+                            <li><a href="#"><span class="fa fa-star" aria-hidden="true" ></span></a></li>
+                            <li><a href="#"><span class="fa fa-star-half-o" aria-hidden="true" ></span></a></li>
+                            <li><a href="#"><span class="fa fa-star-half-o" aria-hidden="true" ></span></a></li>
+                            <li><a href="#"><span class="fa fa-star-o" aria-hidden="true" ></span></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+           
+        </div>
     </div>
 {% endblock %}  
 
