--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,10 +17,6 @@ body a {
     -ms-transition: 0.5s all;
 }
 
-a:hover {
-    text-decoration: none;
-}
-
 input[type="button"],
 input[type="submit"],
 input[type="text"],
@@ -126,4 +122,26 @@ input[type="search"] {
 
 footer{
     background: #fff;
+}
+
+.nav-footer {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+.footer-items{
+    padding-left: 40px;
+}
+.contacts{
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+}
+.footer-items.email{
+    padding-top: 45px;
+}
+.footer-items.email  h5{
+    font-weight: bold;
+    color: teal;
 }
