--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -30,7 +30,7 @@
         </ul>
       </div>
 
-      <div class="col-5 footer-items email">
+      <div class="col-5 footer-items">
         {% subscriptions_form %}
       </div>
     </div>    
