--- a/templates/include/right_sidebar.html
+++ b/templates/include/right_sidebar.html
@@ -1,15 +1,8 @@
+{% load movie_tag %}
 <div class="deal-leftmk left-side">
     <h3 class="title">Последние добавленные</h3>
 
-    <div class="">
-        <div class="img-deals col-md-4">
-            <img src="" class="img-fluid" alt="">
-        </div>
-        <div class="img-deal1 col-md-4">
-            <h3 class="editContent">movie.title</h3>
-            <a href='#' class="" ></a>
-        </div>
-    </div>
+    {% get_last_movies count=1 %}
 
 </div>
        
