--- a/templates/include/left_sidebar.html
+++ b/templates/include/left_sidebar.html
@@ -1,4 +1,4 @@
-<section class="ab-info-main">
+<section class="ab-info-main section-items left-top-radius">
     <h4 class="left-item  title" >Поиск фильма</h4>
     <div class="left-item search-bar">
         <h4 class="simple-title" >По названию фильма</h4>
