--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -2,9 +2,9 @@
 {% load static%}
 
 {% block content %}
+<div class="section-items">
     <div class="left-ads-display col-lg-9">
-        <div class="row">
-         
+        <div class="row">         
             <div class="col-md-4 product-men">
                 <div class="product-shoe-info editContent text-center mt-lg-4" >
                     <div class="men-thumb-item">
@@ -33,5 +33,6 @@
            
         </div>
     </div>
+</div>    
 {% endblock %}  
 
