--- a/templates/include/right_sidebar.html
+++ b/templates/include/right_sidebar.html
@@ -1,5 +1,5 @@
 {% load movie_tag %}
-<div class="deal-leftmk left-side">
+<div class="deal-leftmk left-side section-items right-top-radius">
     <h3 class="title">Последние добавленные</h3>
 
     {% get_last_movies count=1 %}
