--- a/templates/movies/tags/last_movie.html
+++ b/templates/movies/tags/last_movie.html
@@ -1,13 +1,13 @@
 {% for movie in last_movies %}
-<div class="movie">
+<div class="movie left-item">
     <a href="TODO потом добавить:movie.get_absolute_url" class="">    
         <div class="">
             <img src="{{ movie.poster.url }}" class="img-fluid" alt="{{ movie.title }}">
         </div>
         <div class="img-deal1">
             <h3 class="simple-title">{{ movie.title }}</h3>
-            <p class="text-muted">{{ movie.year }}, {{ movie.genres }}</p>
-            <p>{{ movie.category }}</p>
+            <p class="text-muted">{{ movie.year }}, {{ movie.genres.get.name }} ({{ movie.category }})</p>
+            <p class="text-muted">TODO добавить рейтинги</p>
         </div>
     </a>    
 </div>
