work index.html

--- a/templates/include/left_sidebar.html
+++ b/templates/include/left_sidebar.html
@@ -34,7 +34,7 @@
                                                 
                 </ul>
             </div>
-            <button type="submit" class="main-btn">search</button>
+            <button type="submit" class="main-btn btn btn_subscibe">Найти</button>
         </form> 
     </div>    
 </section>
